other/restrict-clusterrole-csr/.kyverno-test/resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: violating-clusterrole
rules:
- apiGroups: [""]
  resources: ["certificatesigningrequests/approval"]
  verbs: ["update", "approve"]
- apiGroups: [""]
  resources: ["signers"]
  verbs: ["approve"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: non-violating-clusterrole
rules:
- apiGroups: [""]
  resources: ["certificatesigningrequests/approval"]
  verbs: ["get", "list"]
- apiGroups: [""]
  resources: ["signers"]
  verbs: ["get", "list"]
